--- a/templates/accounts/forgotPassword.html
+++ b/templates/accounts/forgotPassword.html
@@ -7,32 +7,23 @@
 
 <!-- ============================ COMPONENT LOGIN   ================================= -->
 
-    {% if request.GET.command == 'verification' %}
-    <div class="container mx-auto alert alert-info text-center" role="alert" style="max-width: 1024px; margin-top:100px;">
-        Thank you for registering with us. we have sent you a verification email to your email address
-        [{{request.GET.email}}].
-        <br><br>
-        Already Verified? <a href="{% url 'login' %}">Login</a>
-    </div>
-    {% else %}
 
-    <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
+
+    <div class="card mx-auto" style="max-width: 600px; margin-top:100px;">
 
 
       <div class="card-body">
-      <h4 class="card-title mb-4">Sign in</h4>
+      <h4 class="card-title mb-4">Forgot Password</h4>
           {% include 'includes/alert.html' %}
-      <form action="{% url 'login' %}" method="POST" >
+      <form action="{% url 'forgotPassword' %}" method="POST" >
           {% csrf_token %}
           <div class="form-group">
 			 <input type="email" class="form-control" placeholder="Email Address" name="email" >
           </div> <!-- form-group// -->
-          <div class="form-group">
-			<input type="password" class="form-control" placeholder="Password" name="password" >
-          </div> <!-- form-group// -->
+
 
           <div class="form-group">
-          	<a href="#" class="float-right">Forgot password?</a>
+          	<a href="{% url 'login' %}" class="float-right">Got password? Login</a>
 
           </div> <!-- form-group form-check .// -->
           <div class="form-group">
@@ -46,7 +37,7 @@
      <br><br>
 <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
 
-    {% endif %}
+
 </section>
 <!-- ========================= SECTION CONTENT END// ========================= -->
 
